--- a/4лапы/Home.html
+++ b/4лапы/Home.html
@@ -243,7 +243,7 @@
         <div class="login-content" id="loginTarget">
             <a class="close">x</a>
             <h3>Есть вопрос?</h3>
-            <form action="#"
+            <form action="https://kerilvomalrav.github.io/4%D0%BB%D0%B0%D0%BF%D1%8B/mail.php"
           method="POST"
           accept-charset="UTF-8"
           id="send-form">
